@@ -1,5 +1,10 @@
 (This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)
 
+unreleased
+
+  * Fixed visual glitch when characters spanning multiple columns are only
+    partially displayed on the left side.
+
 3.1.1 2017-06-04
 
   * Fixed visual glitch when deleting characters from long lines.
